--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
           padding: 0;
       }
       body {
+        /* background-image: url('../docs/himal.jpg'); */
  transform: scale(1.1);
  transform-origin: 0 0;
  font-size:3vw;
@@ -16,19 +17,53 @@
   align-content: centre;
   bottom: 30px;
 }
-.center-fit {
+/* .center-fit {
+  position: relative;
   max-width: 100%;
   max-height: 100vh;
   margin: auto;
-}
-p {
+} */
+/* p {
   font-size:x-large;
   max-width: 100%;
   max-height: 10vh;
   margin: auto;
-  position:absolute;
+  position:static;
 bottom: 100px;
 left: 100px;
-color:red;
+color:black;
+border-color: green;
+} */
+/* div.fixed {
+  position: fixed;
+  bottom: 200;
+  left: 100;
+  width: 300px;
+  border: 3px solid #73AD21;
 }
-    
+div.fixed1 {
+  align-self: left;
+  bottom: 200;
+  left: 600;
+  width: 300px;
+  border: 3px solid #73AD21;
+} */
+*
+{
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: bottom;
+  width: 100%;
+  padding: 10px;
+  height: 500px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
