--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,9 @@ color:red
   row-gap: 800px;
   
 }
+p{
+  font-size: 20px;;
+}
 
 ul>li {
   display: block;
@@ -48,7 +51,7 @@ ul>li {
 
 /* A link that has been visited */
 a{
-  font-size: x-large; margin-left: 40px;
+  font-size: large; margin-left: 40px;
   color: rgb(216, 16, 16);
 }
 a:visited {
@@ -72,6 +75,24 @@ a:visited {
 }
 
 @media (min-width: 900px) {
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
   .details
   {
@@ -86,15 +107,33 @@ font-size: 1vw;
     column-gap: 10px;
     flex-direction: row; 
   }
-  p {
-    font-size:2vw;
-    width: 600px;
+  /* p {
+    font-size:1.6vw;
+    width:1000px;
     position: absolute;
     align-content: center;
-    left: 400px;
-    bottom: 200px;
+    left: 50px;
+    top: 200px;
+    padding-left: 50pt;
+  padding-right: 50pt;
+  border-color: green; */
     /* border: 3px solid #73AD21; */
   }
+  /* p.one{
+    border-style: solid;
+  border-color: green;
+  width:300px;
+  height: 400px;
+  font-size: 20px;;
+  }
+  p.two{
+    border-style: solid;
+  border-color: green;
+  width:300px;
+  height: 400px;
+  font-size: 20px;
+  
+  } */
   /* p {
     font-size:3vw;
     position: absolute;
@@ -102,11 +141,11 @@ font-size: 1vw;
     
     left: 16px;
     top: 400px;
-  }
+  }*/
    .imgbox {
     display: grid;
     height: 100%;
-    opacity: 0.5;
+    opacity: 1.0;
     filter: alpha(opacity=0);
     width:350; 
     margin-top: 20px;
@@ -115,9 +154,9 @@ font-size: 1vw;
     max-width: 100%;
     max-height: 100vh;
     margin: auto;
-}  */
+}  
    
-}
+
 h2{
     background-color:blue;
     background-position: fixed;
@@ -186,9 +225,19 @@ align-content: center;
 margin-left: 10px;
 font-size: 4vw;
   }
-  .email
+  div.email
   {
-    margin-left: 50px;
+    position:absolute;
+  text-align: center;
+    margin-left: 140px;
+    margin-top: 150px;
+    font-size: medium;
+  }
+  div.contact
+  {
+  text-align: left;
+    margin-left: 100px;
+    margin-top: 20px;
   }
   
   /* .bottom-right {
