--- a/src/style.css
+++ b/src/style.css
@@ -34,36 +34,36 @@ left: 100px;
 color:black;
 border-color: green;
 } */
-/* div.fixed {
+div.fixed {
   position: fixed;
   bottom: 200;
   left: 100;
   width: 300px;
   border: 3px solid #73AD21;
-}
-div.fixed1 {
-  align-self: left;
-  bottom: 200;
-  left: 600;
-  width: 300px;
-  border: 3px solid #73AD21;
-} */
-*
-{
-  box-sizing: border-box;
-}
 
-/* Create two equal columns that floats next to each other */
-.column {
-  float: bottom;
-  width: 100%;
-  padding: 10px;
-  height: 500px; /* Should be removed. Only for demonstration */
 }
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+*{
+  margin: 0;
+  padding: 0;
+}
+.container {
+  display: inline-flex;
+  font-weight: bold;
+  /* vertical-align: top; */
+  width: 600px;
+  height: 400px;
+  flex-direction: column;
+  margin-top: 50px;
+  margin-left: 50px;;
+}
+.main {
+  background: deepskyblue;
+  flex: 1;
+  text-align: center;
+  flex-direction: column;
+}
+.image {
+  background: hotpink;
+  flex: 1;
+  
 }
