--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,10 @@ color:red
   
 }
 p{
-  font-size: 20px;;
+  font-size:3vw;
+  color:purple;
+  width: 400px;
+  height:200px;
 }
 
 ul>li {
@@ -74,12 +77,43 @@ a:visited {
   flex-direction: column;
 }
 
-@media (min-width: 900px) {
-  * {
+.container2 {
+  display: inline-flex;
+  font-weight: bold;
+  vertical-align: top;
+  width: 500px;
+  height: 600px;
+  border-spacing: 50px;
+  flex-direction: column;
+}
+.main {
+  background: lightskyblue;
+  flex: 1;
+  text-align: left;
+  
+  
+}
+.image2 {
+  background: hotpink;
+  flex: 1;
+}
+
+@media (min-width: 700px) {
+  /* * {
     box-sizing: border-box;
-  }
+  } */
   
   /* Create two equal columns that floats next to each other */
+  p{
+  font-size: 1.6vw;
+  color:purple;
+  width: 700px;
+  height:100px;
+  margin-left: 50px;
+  }
+  .container {
+    flex-direction: row;
+  }
   .column {
     float: left;
     width: 50%;
@@ -94,15 +128,27 @@ a:visited {
     clear: both;
   }
 
-  .details
+  /* .details
   {
 width: 600px;
 align-content: center;
 margin-left: 10px;
 font-size: 1vw;
+  } */
+  .container2 {
+    
+    flex-direction: row;
   }
-
-  
+  .main {
+    
+    text-align: left;
+    
+    flex-direction: row;
+  }
+  .image2 {
+    background: hotpink;
+    flex: 1;
+  }
   .flex-container ul { 
     column-gap: 10px;
     flex-direction: row; 
@@ -118,7 +164,7 @@ font-size: 1vw;
   padding-right: 50pt;
   border-color: green; */
     /* border: 3px solid #73AD21; */
-  }
+  
   /* p.one{
     border-style: solid;
   border-color: green;
@@ -153,10 +199,10 @@ font-size: 1vw;
   .center-fit {
     max-width: 100%;
     max-height: 100vh;
-    margin: auto;
-}  
+    margin-left:100px;
+}  }
    
-
+/*END OF MED QUERY*/
 h2{
     background-color:blue;
     background-position: fixed;
@@ -225,21 +271,13 @@ align-content: center;
 margin-left: 10px;
 font-size: 4vw;
   }
-  div.email
-  {
-    position:absolute;
-  text-align: center;
-    margin-left: 140px;
-    margin-top: 150px;
-    font-size: medium;
-  }
-  div.contact
-  {
-  text-align: left;
+ 
+  .contact
+  {background-size: 20px;
+    text-align: left;
     margin-left: 100px;
     margin-top: 20px;
   }
-  
   /* .bottom-right {
     position: absolute;
     bottom: 8px;
@@ -289,5 +327,6 @@ color:red */
     margin-top: 20px;
   } */
   
-  
+
+
   
