--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,19 @@ left: 100px;
 color:black;
 border-color: green;
 } */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 div.fixed {
   position: fixed;
   bottom: 200;
@@ -51,7 +64,7 @@ div.fixed {
   font-weight: bold;
   /* vertical-align: top; */
   width: 600px;
-  height: 400px;
+  height: 650px;
   flex-direction: column;
   margin-top: 50px;
   margin-left: 50px;;
