--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,90 @@ left: 100px;
 color:red
 }  */
 
+/* body{
+  background-color: rosybrown;
+} */
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+/* background-image: url('../docs/himal.jpg'); */
+transform: scale(1.1);
+transform-origin: 0 0;
+font-size:3vw;
+background-color:lightsteelblue;text-align:center"
+}
 
+.imgbox {
+display: grid;
+height: 100%;
+align-content: centre;
+bottom: 30px;
+}
+/* .center-fit {
+position: relative;
+max-width: 100%;
+max-height: 100vh;
+margin: auto;
+} */
+/* p {
+font-size:x-large;
+max-width: 100%;
+max-height: 10vh;
+margin: auto;
+position:static;
+bottom: 100px;
+left: 100px;
+color:black;
+border-color: green;
+} */
+.column {
+float: left;
+width: 100%;
+padding: 10px;
+height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
+div.fixed {
+position: fixed;
+bottom: 200;
+left: 100;
+width: 300px;
+border: 3px solid #73AD21;
+
+}
+*{
+margin: 0;
+padding: 0;
+}
+.container {
+display: inline-flex;
+font-weight: bold;
+/* vertical-align: top; */
+width: 600px;
+height: 650px;
+flex-direction: column;
+margin-top: 50px;
+margin-left: 50px;;
+}
+.main {
+background: deepskyblue;
+flex: 1;
+text-align: center;
+flex-direction: column;
+}
+.image {
+background: hotpink;
+flex: 1;
+
+}
 
 .flex-container {
   display: -webkit-flex;
@@ -44,7 +127,7 @@ p{
   font-size:3vw;
   color:purple;
   width: 400px;
-  height:200px;
+  height:500px;
 }
 
 ul>li {
@@ -108,17 +191,24 @@ a:visited {
   font-size: 1.6vw;
   color:purple;
   width: 700px;
-  height:100px;
-  margin-left: 50px;
+  height:700px;
+  margin-left: 10px;
+  }
+  h6{
+    color: rgb(60, 0, 128);
+    font-size: 1.6vw;
+    text-decoration-color: rebeccapurple;
   }
   .container {
+    margin:20px;
+    height: 400px;
     flex-direction: row;
   }
   .column {
     float: left;
-    width: 50%;
+    width: 31%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 500px; /* Should be removed. Only for demonstration */
   }
   
   /* Clear floats after the columns */
