--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ color:red
 /* body{
   background-color: rosybrown;
 } */
+
 * {
   margin: 0;
   padding: 0;
@@ -40,7 +41,7 @@ body {
 transform: scale(1.1);
 transform-origin: 0 0;
 font-size:3vw;
-background-color:lightsteelblue;text-align:center"
+background-color:rgb(164, 233, 210);text-align:center"
 }
 
 .imgbox {
