--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 transform: scale(1.1);
 transform-origin: 0 0;
 font-size:3vw;
-background-color:lightsteelblue;text-align:center"
+background-color:rgb(82, 55, 55);text-align:center"
 }
 
 .imgbox {
