--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,11 @@
-/* Desktop Styles */
-/* * {
-  margin: 0;
-  padding: 0;
-}
-body {
-
-transform: scale(1.1);
-transform-origin: 0 0;
-}
-.imgbox {
-  display: grid;
-  height: 100%;
-}
-.center-fit {
-  max-width: 100%;
-  max-height: 100vh;
-  margin: auto;
-}
-
-p {
-  max-width: 100%;
-  max-height: 10vh;
-  margin: auto;
-  position:absolute;
-bottom: 500px;
-left: 100px;
-color:red
-}  */
-
-/* body{
-  background-color: rosybrown;
-} */
 
 * {
   margin: 0;
   padding: 0;
 }
-body {
-/* background-image: url('../docs/himal.jpg'); */
-transform: scale(1.1);
-transform-origin: 0 0;
-font-size:3vw;
-background-color:rgb(224, 198, 203);text-align:center"
+body{
+  font-size:3vw;
+    background-color:rgb(228, 161, 197);
 }
 
 .imgbox {
@@ -50,6 +14,18 @@ height: 100%;
 align-content: centre;
 bottom: 30px;
 }
+h6{
+  margin-top: 80px;
+}
+.contactgit{
+  margin-top: 50px;
+}
+
+/* .navbar a.active {
+  background-color: #4CAF50;
+  color: rgb(255, 255, 255);
+} */
+
 /* .center-fit {
 position: relative;
 max-width: 100%;
@@ -71,7 +47,8 @@ border-color: green;
 float: left;
 width: 100%;
 padding: 10px;
-height: 300px; /* Should be removed. Only for demonstration */
+height: 300px;
+margin-top:100px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
@@ -80,14 +57,7 @@ content: "";
 display: table;
 clear: both;
 }
-div.fixed {
-position: fixed;
-bottom: 200;
-left: 100;
-width: 300px;
-border: 3px solid #73AD21;
 
-}
 *{
 margin: 0;
 padding: 0;
@@ -102,6 +72,16 @@ flex-direction: column;
 margin-top: 50px;
 margin-left: 50px;;
 }
+.container3 {
+  display: inline-flex;
+  font-weight: bold;
+  /* vertical-align: top; */
+  width: 600px;
+  height: 200px;
+  flex-direction: column;
+  margin-top: 50px;
+  margin-left: 50px;;
+  }
 .main {
 background: deepskyblue;
 flex: 1;
@@ -117,19 +97,37 @@ flex: 1;
 .flex-container {
   display: -webkit-flex;
   display: flex;
+  width:100%;
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
   background-color: #E57373;
   border-spacing: 20px;
   row-gap: 800px;
+  position: fixed;
+  
+   
+    
+    transform: scale(1.1);
+    transform-origin: 0 0;
+    font-size:3vw;
+    background-color:rgb(224, 198, 203);
+    }
+  
+  
   
 }
+
 p{
   font-size:3vw;
   color:purple;
   width: 400px;
   height:500px;
 }
+nav ul {
+  position: sticky;
+  top: 0;
+}
+
 
 ul>li {
   display: block;
@@ -146,7 +144,7 @@ a:visited {
 
 }
 
-/* @media (min-width: @screen-sm-min) {
+  /* @media (min-width: @screen-sm-min) { */
   .menu li {
     text-align: center;
     display: inline;
@@ -154,8 +152,8 @@ a:visited {
   }
   .menu ul {
     display: flex;
-  }
-} */
+  } 
+
 .flex-container ul {
   display: flex;
   flex-direction: column;
@@ -182,12 +180,23 @@ a:visited {
   flex: 1;
 }
 
-@media (min-width: 700px) {
+@media screen and (min-width: 599px)  {
   /* * {
     box-sizing: border-box;
   } */
   
   /* Create two equal columns that floats next to each other */
+  /* body {
+   
+    
+    transform: scale(1.1);
+    transform-origin: 0 0;
+    font-size:3vw;
+    background-color:rgb(224, 198, 203);
+    } */
+    h6{
+      margin-top: 0px;
+    }
   p{
   font-size: 1.6vw;
   color:purple;
@@ -227,7 +236,7 @@ margin-left: 10px;
 font-size: 1vw;
   } */
   .container2 {
-    
+    margin-top: 50px;
     flex-direction: row;
   }
   .main {
@@ -243,7 +252,9 @@ font-size: 1vw;
   .flex-container ul { 
     column-gap: 10px;
     flex-direction: row; 
-  }
+    position:sticky;
+  }}
+ 
   /* p {
     font-size:1.6vw;
     width:1000px;
@@ -291,7 +302,14 @@ font-size: 1vw;
     max-width: 100%;
     max-height: 100vh;
     margin-left:100px;
-}  }
+}  
+.contact
+{background-size: 10px;
+  text-align: left;
+  margin-left: 100px;
+  position: relative;
+  top: 150px;
+}
    
 /*END OF MED QUERY*/
 h2{
@@ -338,86 +356,7 @@ a:link
   a:hover {
     color: #00AEEF !important;
   } 
-  /* .image {
-    float:left;align-self: flex-start;   width:500px;height:300px"
-  }
-  .container {
-    position: relative;
-    text-align: center;
-    text-size-adjust: 40;
-    color: rgb(231, 234, 236);
-  } */
   
-  /* .bottom-left {
-    position: absolute;
-    color:red;
-    bottom: 8px;
-    left: 16px;
-    bottom: 180px;
-  } */
-  .details
-  {
-width: 600px;
-align-content: center;
-margin-left: 10px;
-font-size: 4vw;
-  }
- 
-  .contact
-  {background-size: 20px;
-    text-align: left;
-    margin-left: 100px;
-    margin-top: 20px;
-  }
-  /* .bottom-right {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-    color:rgb(192, 255, 224);
-  }
-   */
-   /* .center-fit {
-    max-width: 100%;
-    max-height: 100vh;
-    margin: auto;
-
   
-  }
-   .imgbox {
-    display: grid;
-    height: 100%;
-    opacity: 0.8;
-    filter: alpha(opacity=0); 
-    margin-top: 20px;
-  }
-  p {
-    font-size:x-large;
-    max-width: 100%;
-    max-height: 10vh;
-    margin: auto;
-    position:absolute;
-bottom: 0px;
-left: 100px;
-color:red */
-
-  /* .imgbox {
-    display: grid;
-    height: 100%; */
-
-    /* .center-fit {
-      max-width: 100%;
-      max-height: 100vh;
-      margin: auto;
-      bottom:300px;
-      
-}  */
-  /* img {
-    opacity: 0.5;
-    filter: alpha(opacity=0); /* For IE8 and earlier 
-    width:350; 
-    margin-top: 20px;
-  } */
-  
-
 
   
