--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@ body{
   font-size:3vw;
     background-color:rgb(228, 161, 197);
 }
-
+.copyright{
+  
+  bottom: 0px;
+}
 .imgbox {
 display: grid;
 height: 100%;
@@ -16,6 +19,8 @@ bottom: 30px;
 }
 h6{
   margin-top: 80px;
+  background-color: rgb(199, 195, 248);
+  
 }
 .contactgit{
   margin-top: 50px;
@@ -62,7 +67,7 @@ margin-left: 50px;;
   margin-left: 50px;;
   }
 .main {
-background: deepskyblue;
+background: rgb(204, 205, 206);
 flex: 1;
 text-align: center;
 flex-direction: column;
@@ -92,12 +97,10 @@ flex: 1;
     background-color:rgb(224, 198, 203);
     }
   
-  
-  
-}
 
 p{
   font-size:3vw;
+   font-style: italic;
   color:purple;
   width: 400px;
   height:500px;
@@ -155,24 +158,12 @@ a:visited {
   
 }
 .image2 {
-  background: hotpink;
+  background: rgb(207, 176, 192);
   flex: 1;
 }
 
 @media screen and (min-width: 599px)  {
-  /* * {
-    box-sizing: border-box;
-  } */
   
-  /* Create two equal columns that floats next to each other */
-  /* body {
-   
-    
-    transform: scale(1.1);
-    transform-origin: 0 0;
-    font-size:3vw;
-    background-color:rgb(224, 198, 203);
-    } */
     h6{
       margin-top: 0px;
     }
@@ -184,8 +175,15 @@ a:visited {
   margin-left: 10px;
   }
   h6{
-    color: rgb(60, 0, 128);
-    font-size: 1.6vw;
+    margin-left: 28px;
+    width: 1110px;
+    box-shadow: 0ex;
+    text-shadow: 0vmax;
+    color: rgb(51, 20, 80);
+    background-color:rgb(198, 200, 201);
+    font-style: normal;
+    
+    font-size: 1.4vw;
     text-decoration-color: rebeccapurple;
   }
   .container {
@@ -207,19 +205,13 @@ a:visited {
     clear: both;
   }
 
-  /* .details
-  {
-width: 600px;
-align-content: center;
-margin-left: 10px;
-font-size: 1vw;
-  } */
+  
   .container2 {
     margin-top: 50px;
     flex-direction: row;
   }
   .main {
-    
+    background: rgb(198, 200, 201);
     text-align: left;
     
     flex-direction: row;
@@ -232,43 +224,9 @@ font-size: 1vw;
     column-gap: 10px;
     flex-direction: row; 
     position:sticky;
-  }}
- 
-  /* p {
-    font-size:1.6vw;
-    width:1000px;
-    position: absolute;
-    align-content: center;
-    left: 50px;
-    top: 200px;
-    padding-left: 50pt;
-  padding-right: 50pt;
-  border-color: green; */
-    /* border: 3px solid #73AD21; */
-  
-  /* p.one{
-    border-style: solid;
-  border-color: green;
-  width:300px;
-  height: 400px;
-  font-size: 20px;;
   }
-  p.two{
-    border-style: solid;
-  border-color: green;
-  width:300px;
-  height: 400px;
-  font-size: 20px;
+ /*END OF MEDIA QUERY*/
   
-  } */
-  /* p {
-    font-size:3vw;
-    position: absolute;
-    color:red;
-    
-    left: 16px;
-    top: 400px;
-  }*/
    .imgbox {
     display: grid;
     height: 100%;
@@ -276,7 +234,7 @@ font-size: 1vw;
     filter: alpha(opacity=0);
     width:350; 
     margin-top: 20px;
-  }
+  }}
   .center-fit {
     max-width: 100%;
     max-height: 100vh;
@@ -290,7 +248,7 @@ font-size: 1vw;
   top: 150px;
 }
    
-/*END OF MED QUERY*/
+
 h2{
     background-color:blue;
     background-position: fixed;
@@ -304,25 +262,7 @@ a:link
   color:rgb(60, 0, 128);
 }
 
-/* .flex-container {
-    /* position: relative; 
-    margin-right: 20px;
-    margin-top: 30px;
-    display: flex;
-	  flex-wrap: nowrap;
-	  background-color: rgb(105, 158, 155);
-  }*/
-  
-  /* .space {
-	
-    
-    margin-top:15px;
-    margin-bottom: 15px;
-    border-spacing: 30px;
-	text-align: center;
-	line-height: 25px;
-	font-size: 20px;
-  }  */
+
   .flex-container:hover {
     background-color:rgb(148, 138, 147) ;
   }
