--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ margin-left: 50px;;
   margin-left: 50px;;
   }
 .main {
-background: rgb(252, 248, 248);
+background: lightskyblue;
 flex: 1;
 text-align: center;
 flex-direction: column;
@@ -120,7 +120,7 @@ ul>li {
 
 /* A link that has been visited */
 a{
-  font-size: large; margin-left: 40px;
+  font-size: 2vw; margin-left: 40px;
   color: rgb(216, 16, 16);
 }
 a:visited {
@@ -153,7 +153,7 @@ a:visited {
   flex-direction: column;
 }
 .main {
-  background: lightskyblue;
+  background: rgb(248, 249, 250);
   flex: 1;
   text-align: left;
   
