--- a/styles.css
+++ b/styles.css
@@ -59,22 +59,42 @@ flex-direction: column;
 margin-top: 50px;
 margin-left: 50px;;
 }
+.container4
+{
+  display: inline-flex;
+font-weight: bold;
+/* vertical-align: top; */
+width: 600px;
+height: 650px;
+flex-direction: column;
+margin-top: 50px;
+margin-left: 50px;;
+}
+.p3{
+  font-size: 3vw;
+  color:rgb(12, 3, 82);
+  width: 600px;
+  height:100px;
+  margin-left: 20px;
+  }
+
+
 .container3 {
   display: inline-flex;
   font-weight: bold;
   /* vertical-align: top; */
   width: 600px;
-  height: 200px;
+  height: 450px;
   flex-direction: column;
   margin-top: 50px;
   margin-left: 50px;;
   }
-.main {
-background: lightskyblue;
+/* .main {
+/* background: lightskyblue;
 flex: 1;
 text-align: center;
 flex-direction: column;
-}
+} */ */
 .image {
 background: hotpink;
 flex: 1;
@@ -122,7 +142,7 @@ ul>li {
 
 /* A link that has been visited */
 a{
-  font-size: 2vw; margin-left: 40px;
+  font-size: 3vw; margin-left: 40px;
   color: rgb(216, 16, 16);
 }
 a:visited {
@@ -134,7 +154,7 @@ a:visited {
   .menu li {
     text-align: center;
     display: inline;
-    width: 100%;
+    width:100%;
   }
   .menu ul {
     display: flex;
@@ -156,41 +176,68 @@ a:visited {
 }
 .main {
   background: rgb(248, 249, 250);
-  flex: 1;
+  flex: 2;
   text-align: left;
+  height: 10px;
   
   
 }
+
 .image2 {
   
     width: 40%;
-
+    margin-left: 50px;
     height: auto;
-    
-  
-  
-  
-  
 }
+    
+.p3{
+    font-size: 3vw;
+    color:rgb(12, 3, 82);
+    width: 800px;
+    height:100px;
+    margin-left: 20px;
+    }
+  
+  
+  
+
 
 @media screen and (min-width: 599px)  {
+  .p1{
+    width: 250px;
+    font-size: 1.6vw;
+    color:rgb(45, 45, 100);
+    height:100px;
+    margin-left: 20px;
+  }
   .image2 {
-    width: 40%;
+    width: 25%;
     height: auto;
   }
   .responsive {
     width: 100%;
     height: auto;
   }
+  a{
+    font-size: 2vw; margin-left: 40px;
+    color: rgb(216, 16, 16);
+  }
   
    
   p{
   font-size: 1.6vw;
-  color:purple;
+  color:rgb(12, 3, 82);
   width: 800px;
-  height:200px;
+  height:400px;
   margin-left: 20px;
   }
+  .p3{
+    font-size: 1.6vw;
+    color:rgb(12, 3, 82);
+    width: 800px;
+    height:100px;
+    margin-left: 20px;
+    }
   h6{
     margin-top: 0px;
     margin-left: 28px;
@@ -211,9 +258,12 @@ a:visited {
   }
   .column {
     float: left;
-    width: 31%;
-    padding: 10px;
+    width: 25%;
+   
     height: 500px; /* Should be removed. Only for demonstration */
+  }
+  h3{
+    margin-left: 20px;
   }
   
   /* Clear floats after the columns */
@@ -231,7 +281,7 @@ a:visited {
   .main {
     background: rgb(248, 249, 250);
     text-align: left;
-    
+    margin-left: 20px;
     flex-direction: row;
   }
   
